--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@genkit-ai/core": "^1.12.0",
     "@genkit-ai/google-cloud": "^1.12.0",
+    "firebase": "^11.9.1",
     "lucide-react": "^0.514.0",
     "next": "^15.3.3",
     "react": "^19.1.0",
